--- a/encapsulation/src/app/globals.css
+++ b/encapsulation/src/app/globals.css
@@ -40,3 +40,26 @@ a {
     color-scheme: dark;
   }
 }
+
+.addition {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: center;
+}
+
+.addition__total {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+
+.addition__actions {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+
+.button {
+  padding: 10px;
+}
